--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,6 @@
     android:backgroundTint="#373737"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/signInButton"
-        android:layout_width="127dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="63dp"
-        android:text="@string/connexion_google"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gXXXXinput"
-        tools:ignore="TextSizeCheck" />
-
     <EditText
         android:id="@+id/gXXXXinput"
         android:layout_width="369dp"
@@ -41,10 +30,10 @@
         android:id="@+id/downloadBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="73dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="48dp"
         android:text="@string/download"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signInButton" />
+        app:layout_constraintTop_toBottomOf="@+id/gXXXXinput" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
